# fictional-dollop

./: Cargo.toml  README.md  rustfmt.toml
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: headers.rs  lib.rs
crates/ast/test_data/: structs.fd
crates/codegen_aarch64/: Cargo.toml
crates/codegen_aarch64/src/: lib.rs
crates/codegen_aarch64/test_data/: binary_operations.fd  blocks.fd  function_calls.fd  var_statements.fd  variable_references.fd
crates/compiler/: Cargo.toml
crates/compiler/src/: main.rs
crates/cst/: Cargo.toml
crates/cst/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs
crates/hir/test_data/: binary_operations.fd  blocks.fd  empty.fd  empty_body.fd  function_calls.fd  try_to_call_type.fd  undefined_function_in_function_call.fd  undefined_module_in_function_call.fd  undefined_variable.fd  var_statements.fd  variable_references.fd  variable_scoping.fd
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/mir/: Cargo.toml
crates/mir/src/: lib.rs
crates/mir/test_data/: binary_operations.fd  blocks.fd  function_calls.fd  var_statements.fd  variable_references.fd
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  lib.rs
crates/parser/test_data/: binary_operations.fd  blocks.fd  broken_paths.fd  broken_statements.fd  broken_structs.fd  empty.fd  empty_function.fd  empty_struct.fd  function_calls.fd  (+7 more)
crates/raw_index/: Cargo.toml
crates/resolved_index/: Cargo.toml
crates/sema/: Cargo.toml
crates/syntax/: Cargo.toml
crates/test_utils/: Cargo.toml
(+24 files in other folders)
